# ECE650

./: README.md
a0/: user.yml
a1/: a1ece650.py  test2.py  user.yml
a2/: ece650-a2.cpp  user.yml
a3/: CMakeLists.txt  ece650-a1.py  ece650-a2.cpp  ece650-a3.cpp  regen  regen.cpp  test.cpp  user.yml
a4/: CMakeLists.txt  ece650-a4.cpp
project/: CMakeLists.txt  ece650-leo-automated.cpp  ece650-leo.cpp  ece650-prj.cpp  stderr.txt  stdin.txt  stdout.txt  user.yml
